test/compiler/fail/undefinedstruct.bt
Struct sth s;
s.a = 17; // assign field